--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -119,17 +119,18 @@
             </head>
 
             <body>
-
-                <div class="grid-container">
-                    <div class="grid-item"><a href="section-hub.html">news</a></div>
-                    <div class="grid-item"><a href="section-hub.html">technology</a></div>
-                    <div class="grid-item"><a href="section-hub.html">sport</a></div>
-                    <div class="grid-item"><a href="section-hub.html">fashion</a></div>
-                    <div class="grid-item"><a href="section-hub.html">art</a></div>
-                    <div class="grid-item"><a href="section-hub.html">science</a></div>
-                    <div class="grid-item"><a href="section-hub.html">lifestyle</a></div>
-                    <div class="grid-item"><a href="section-hub.html">politics</a></div>
-                    <div class="grid-item"><a href="section-hub.html">s</a></div>
+                <div class="nav-grid-main-page">
+                    <div class="grid-container">
+                        <div class="grid-item"><a href="section-hub.html">news</a></div>
+                        <div class="grid-item"><a href="section-hub.html">technology</a></div>
+                        <div class="grid-item"><a href="section-hub.html">sport</a></div>
+                        <div class="grid-item"><a href="section-hub.html">fashion</a></div>
+                        <div class="grid-item"><a href="section-hub.html">art</a></div>
+                        <div class="grid-item"><a href="section-hub.html">science</a></div>
+                        <div class="grid-item"><a href="section-hub.html">lifestyle</a></div>
+                        <div class="grid-item"><a href="section-hub.html">politics</a></div>
+                        <div class="grid-item"><a href="section-hub.html">s</a></div>
+                    </div>
                 </div>
                 <br>
         </div>
