--- a/sandbox/project/technology.html
+++ b/sandbox/project/technology.html
@@ -55,11 +55,11 @@
             in a meaningful way. At any given time, about one-third of the classrooms are engaged in some
             technology-related activities. Students blog immediately when they come into class to settle in. They’ve
             written and recorded their own protest songs on their laptops while studying the First Amendment.
-            <br>
+            <br><img src="obrazky/surface.jpg" alt="" class="image">
             <br>
             <h3>Stronger Connections</h3>
             <br>
-            While laptops may have started as a business tool, <img src="obrazky/surface.jpg" alt="" class="image">
+            While laptops may have started as a business tool,
             their role in education is only now being fully
             explored—both in Third World countries with limited access to formal education and Westernized education
             systems. They are being used to support overburdened school districts with limited teaching resources;
@@ -101,21 +101,27 @@
             LectureTools, which makes use of the laptops his students carry into his lecture hall.
             <br>
             <br>
-            Ipsa quas neque aperiam repudiandae asperiores. Porro expedita itaque nemo qui quibusdam, praesentium ex
-            tempora
-            ut molestiae quis cumque eaque atque quasi magni, minus
-            corporis? Asperiores labore quae commodi voluptatibus, perspiciatis harum consequatur corporis, voluptas
-            porro
-            quod quisquam, reprehenderit eos consectetur. Ex expedita mollitia praesentium et molestiae cupiditate
-            tempora
-            facilis. Sint adipisci tempore laudantium corporis quo quas. itaque totam placeat nobis asperiores
-            quibusdam
-            explicabo consequatur dignissimos eius animi, deserunt,
-            omnis
-            consequuntur error. Neque distinctio ea, animi
-            error consectetur reprehenderit tenetur suscipit laborum est quia repudiandae, laudantium quis ullam
-            quisquam
-            non quibusdam quos autem voluptatum soluta quidem doloribus?
+            During class, students can view Professor Samson’s PowerPoint slides on their laptops and take notes
+            directly on the slides. Using a chat window, the students can anonymously ask the teacher’s aide questions
+            during the lecture. Professor Samson can see the questions, too, providing him with valuable insight into
+            the student’s comprehension of his lecture without disrupting the flow of the class. Students can also rate
+            their understanding of the slides, giving him more immediate feedback.
+
+            “It’s sobering,” Professor Samson says. “I always thought I was God’s gift to lecturing; now I realize how
+            confused the students were before they could ask questions.”
+
+            After laughing, he continues: “The students can ask what they think is a dumb question without fear. In the
+            30 years I’ve taught, there are usually only five or six students in a 300-student lecture class who had the
+            chutzpah to raise their hand and ask a question. Now, with this system, two-thirds of the students are
+            asking questions.”
+
+            During class, students can use their laptops to answer multiple-choice questions and image-based questions,
+            such as locating weather patterns on a map. “By how they answer questions, I can see which students are in
+            trouble before the first exam and which require more attention,” Professor Samson says.
+
+            Skeptics have been concerned that students will use laptops for too much play and not enough work. But
+            Professor Samson says he’s proven otherwise. “The key is to engage students through their laptops, so they
+            don’t drift off to social networking sites. And we’ve shown you can do that.”
             <br><br>
             Ipsa veritatis voluptatibus quasi quisquam, ut, ratione hic atque quos, aperiam laudantium similique
             modi
