--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -121,7 +121,7 @@
             <body>
                 <div class="nav-grid-main-page">
                     <div class="grid-container">
-                        <div class="grid-item"><a href="section-hub.html">news</a></div>
+                        <div class="grid-item"><a href="section-hub-tech.html">news</a></div>
                         <div class="grid-item"><a href="section-hub.html">technology</a></div>
                         <div class="grid-item"><a href="section-hub.html">sport</a></div>
                         <div class="grid-item"><a href="section-hub.html">fashion</a></div>
