--- a/sandbox/project/technlogy2.html
+++ b/sandbox/project/technlogy2.html
@@ -40,16 +40,17 @@
         <div class="article">
             At Lilla G. Frederick Pilot Middle School (LGF), students don’t just diagram a sentence. They film a
             sentence.
-
-            English students at LGF were instructed to think up a sentence with a prepositional phrase—“Jimmy jumped on
-            a table”—and then create a short video of the sentence, which their classmates viewed on their laptops. “You
+            LGF has become the showcase for the growing belief that laptop computers, properly integrated into
+            classrooms, can have a profound effect on how students learn and act.
+            which their classmates viewed on their laptops. “You
             never saw so much laughter and giggles,” says principal Deb Socia. “And I guarantee none of those students
             will ever forget what a preposition is.”
 
-            LGF has become the showcase for the growing belief that laptop computers, properly integrated into
-            classrooms, can have a profound effect on how students learn and act. The inner-city middle school is
+            The inner-city middle school is
             located in a gang-ridden area in the Dorchester neighborhood of Boston. Thirty percent of the 670 students
-            have special needs, and nine in 10 are considered low income.
+            have special needs, and nine in 10 are considered low income.English students at LGF were instructed to
+            think up a sentence with a prepositional phrase—“Jimmy jumped on
+            a table”—and then create a short video of the sentence,
 
             In 2007, a program was initiated to give each student a laptop and integrate the technology into instruction
             in a meaningful way. At any given time, about one-third of the classrooms are engaged in some
@@ -57,7 +58,7 @@
             written and recorded their own protest songs on their laptops while studying the First Amendment.
             <br><img src="obrazky/code.jpg" alt="" class="image">
             <br>
-            <h3>Stronger Connections</h3>
+            <h3>Sensitive data</h3>
             <br>
             While laptops may have started as a business tool,
             their role in education is only now being fully
@@ -89,7 +90,7 @@
             homework assignments and grades.
             <br>
             <br>
-            <h3>Taking College by Storm</h3>
+            <h3>Privacy</h3>
             <br>
             In a study recently published in Computers in Education Journal, 78 percent of students agreed the laptops
             made them more engaged and about half said they were more attentive as a result of the technology. About
