--- a/sandbox/project/error404.html
+++ b/sandbox/project/error404.html
@@ -24,10 +24,14 @@
                 </span>
             </button>
             <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
-                <a href="#">Link 4</a>
+                <a href="section-hub.html">News</a>
+                <a href="section-hub-tech.html">Technology</a>
+                <a href="section-hub.html">Sport</a>
+                <a href="section-hub.html">Science</a>
+                <a href="section-hub.html">Fashion</a>
+                <a href="section-hub.html">Art</a>
+                <a href="section-hub.html">Lifestyle</a>
+                <a href="section-hub.html">Politics</a>
                 <a href="formular.html">Subscribe to our newsletter</a>
             </div>
         </div>
@@ -40,7 +44,7 @@
         <h2 style="text-align:center">Page not found, probably because we did not have the time to code it.</h2>
     </section>
 
-    <footer>
+    <footer class="footer-s">
         <div class="copyright">
             <p>&copy 2022 - title.com</p>
         </div>
