--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -25,7 +25,7 @@
             </button>
             <div class="dropdown-content">
                 <a href="section-hub.html">News</a>
-                <a href="section-hub.html">Technology</a>
+                <a href="section-hub-tech.html">Technology</a>
                 <a href="section-hub.html">Sport</a>
                 <a href="section-hub.html">Science</a>
                 <a href="section-hub.html">Fashion</a>
@@ -121,8 +121,8 @@
             <body>
                 <div class="nav-grid-main-page">
                     <div class="grid-container">
-                        <div class="grid-item"><a href="section-hub-tech.html">news</a></div>
-                        <div class="grid-item"><a href="section-hub.html">technology</a></div>
+                        <div class="grid-item"><a href="section-hub.html">news</a></div>
+                        <div class="grid-item"><a href="section-hub-tech.html">technology</a></div>
                         <div class="grid-item"><a href="section-hub.html">sport</a></div>
                         <div class="grid-item"><a href="section-hub.html">fashion</a></div>
                         <div class="grid-item"><a href="section-hub.html">art</a></div>
