--- a/sandbox/project/thankyou.html
+++ b/sandbox/project/thankyou.html
@@ -26,10 +26,14 @@
                 </span>
             </button>
             <div class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
-                <a href="#">Link 4</a>
+                <a href="section-hub.html">News</a>
+                <a href="section-hub-tech.html">Technology</a>
+                <a href="section-hub.html">Sport</a>
+                <a href="section-hub.html">Science</a>
+                <a href="section-hub.html">Fashion</a>
+                <a href="section-hub.html">Art</a>
+                <a href="section-hub.html">Lifestyle</a>
+                <a href="section-hub.html">Politics</a>
                 <a href="formular.html">Subscribe to our newsletter</a>
             </div>
         </div>
