--- a/sandbox/project/section-hub-tech.html
+++ b/sandbox/project/section-hub-tech.html
@@ -60,13 +60,13 @@
             <br>
 
             <div class="featured-section-featured">
-                <h3>Featured article</h3>
-                <p class="featured-body-text">As Laptops Evolve, Education Transforms
+                <h3>As Laptops Evolve, Education Transforms</h3>
+                <p class="featured-body-text">
                     <br><br>
 
                     In 2007, a program was initiated to give each student a laptop and integrate the technology into
                     instruction
-                    in a meaningful way. At any given time, about one-third... ||<a href="error404.html"> continue
+                    in a meaningful way. At any given time, about one-third... ||<a href="technology.html"> continue
                         reading ></a>
                 </p>
             </div>
