--- a/sandbox/project/section-hub-tech.html
+++ b/sandbox/project/section-hub-tech.html
@@ -58,7 +58,7 @@
         </head>
 
         <body>
-            <h2>TECHNOLOGY</h2>
+            <h2>Technology</h2>
             <hr>
             <hr>
             <br>
@@ -66,11 +66,15 @@
             <div class="featured-section-featured">
                 <h3>As Laptops Evolve, Education Transforms</h3>
                 <p class="featured-body-text">
-                    <br><br>
 
-                    In 2007, a program was initiated to give each student a laptop and integrate the technology into
-                    instruction
-                    in a meaningful way. At any given time, about one-third... ||<a href="technology.html"> continue
+
+                    At Lilla G. Frederick Pilot Middle School (LGF), students don’t just diagram a sentence. They film a
+                    sentence. <br><br>
+
+                    English students at LGF were instructed to think up a sentence with a prepositional phrase—“Jimmy
+                    jumped on
+                    a table”—and then create a short video of the sentence, which their classmates viewed ... ||<a
+                        href="technology.html"> continue
                         reading ></a>
                 </p>
             </div>
