--- a/sandbox/project/section-hub-tech.html
+++ b/sandbox/project/section-hub-tech.html
@@ -80,11 +80,10 @@
 
             <div class="grid-container">
                 <div class="grid-item">
-                    <h3>Article 1</h3>
-                    <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et
-                        sodales
-                        quam. Duis suscipit a nibh quis
-                        elementum. Aliquam lobortis dignissim... || <a href="error404.html">continue reading ></a></p>
+                    <h3>An extreme form of encryption could solve big data's privacy problem</h3>
+                    <p class="featured-body-text">LGF has become the showcase for the growing belief that laptop
+                        computers, properly integrated into
+                        classrooms... || <a href="error404.html">continue reading ></a></p>
                 </div>
                 <div class="grid-item">
                     <h3>Article 2</h3>
