--- a/sandbox/project/section-hub-tech.html
+++ b/sandbox/project/section-hub-tech.html
@@ -69,11 +69,9 @@
 
 
                     At Lilla G. Frederick Pilot Middle School (LGF), students don’t just diagram a sentence. They film a
-                    sentence. <br><br>
-
-                    English students at LGF were instructed to think up a sentence with a prepositional phrase—“Jimmy
-                    jumped on
-                    a table”—and then create a short video of the sentence, which their classmates viewed ... ||<a
+                    sentence. English students at LGF were instructed to think up a sentence with a prepositional
+                    phrase—“Jimmy jumped on a table”—and then create a short video of the sentence, which their
+                    classmates viewed on their laptops. “You never saw so much laughter and giggles,” says ... ||<a
                         href="technology.html"> continue
                         reading ></a>
                 </p>
