--- a/sandbox/project/section-hub-tech.html
+++ b/sandbox/project/section-hub-tech.html
@@ -83,9 +83,9 @@
             <div class="grid-container">
                 <div class="grid-item">
                     <h3>An extreme form of encryption could solve big data's privacy problem</h3>
-                    <p class="featured-body-text">LGF has become the showcase for the growing belief that laptop
-                        computers, properly integrated into
-                        classrooms... || <a href="error404.html">continue reading ></a></p>
+                    <p class="featured-body-text">ully homomorphic encryption allows us to run analysis on data without
+                        ever seeing the contents. It could
+                        help us reap the full ... || <a href="technology2.html">continue reading ></a></p>
                 </div>
                 <div class="grid-item">
                     <h3>Article 2</h3>
