--- a/sandbox/project/technology4.html
+++ b/sandbox/project/technology4.html
@@ -38,28 +38,12 @@
     </div>
 
     <section>
-        <h2>As Laptops Evolve, Education Transforms</h2>
+        <h2>Boaty McBoatface’s new mission is more serious than its name</h2>
         <hr>
         <hr>
         <div class="article">
-            At Lilla G. Frederick Pilot Middle School (LGF), students don’t just diagram a sentence. They film a
-            sentence.
-
-            English students at LGF were instructed to think up a sentence with a prepositional phrase—“Jimmy jumped on
-            a table”—and then create a short video of the sentence, which their classmates viewed on their laptops. “You
-            never saw so much laughter and giggles,” says principal Deb Socia. “And I guarantee none of those students
-            will ever forget what a preposition is.”
-
-            LGF has become the showcase for the growing belief that laptop computers, properly integrated into
-            classrooms, can have a profound effect on how students learn and act. The inner-city middle school is
-            located in a gang-ridden area in the Dorchester neighborhood of Boston. Thirty percent of the 670 students
-            have special needs, and nine in 10 are considered low income.
-
-            In 2007, a program was initiated to give each student a laptop and integrate the technology into instruction
-            in a meaningful way. At any given time, about one-third of the classrooms are engaged in some
-            technology-related activities. Students blog immediately when they come into class to settle in. They’ve
-            written and recorded their own protest songs on their laptops while studying the First Amendment.
-            <br><img src="obrazky/surface.jpg" alt="" class="image">
+            The submersible is accompanied by other underwater robots as it heads off into the cold, dark underbelly of
+            the Thwaites Glacier.
             <br>
             <h3>Stronger Connections</h3>
             <br>
