--- a/sandbox/project/technology4.html
+++ b/sandbox/project/technology4.html
@@ -44,15 +44,10 @@
         <div class="article">
             The submersible is accompanied by other underwater robots as it heads off into the cold, dark underbelly of
             the Thwaites Glacier.
-            <br>
-            <h3>Stronger Connections</h3>
-            <br>
-            While laptops may have started as a business tool,
-            their role in education is only now being fully
-            explored—both in Third World countries with limited access to formal education and Westernized education
-            systems. They are being used to support overburdened school districts with limited teaching resources;
-            enhance critical thinking and academic success; and strengthen student and parental participation in the
-            learning process.
+
+            Boaty McBoatface, the comically named autonomous submarine courtesy of a collective internet joke, will be
+            among a fleet of underwater robots dispatched to the underbelly of the deteriorating Thwaites glacier in
+            Western Antarctica.<br>
 
             A recent study in the Journal of Technology, Learning, and Assessment found students in one-to-one computer
             settings like LGF outperformed peers in traditional classrooms. In a single year, 20 percent of LGF students
