--- a/sandbox/project/technology3.html
+++ b/sandbox/project/technology3.html
@@ -42,13 +42,10 @@
         <hr>
         <hr>
         <div class="article">
-            Fully homomorphic encryption allows us to run analysis on data without ever seeing the contents. It could
-            help us reap the full benefits of big data, from fighting financial fraud to catching diseases early LIKE any
-            doctor, Jacques Fellay wants to give his patients the best care possible. But his instrument of choice is no
-            scalpel or stethoscope, it is far more powerful than that.
-            which their classmates viewed on their laptops. “You
-            never saw so much laughter and giggles,” says principal Deb Socia. “And I guarantee none of those students
-            will ever forget what a preposition is.”
+            Aimed at athletes, hikers, and others who experience more extreme conditions when wearing their Apple
+            Watches, the new device will be Apple's biggest to date. The display will measure in at almost two inches
+            diagonally, which is larger than the 1.9-inch diagonal screen size of the current Apple Watch Series 7 and
+            the planned Apple Watch Series 8.
 
             The inner-city middle school is
             located in a gang-ridden area in the Dorchester neighborhood of Boston. Thirty percent of the 670 students
@@ -60,9 +57,9 @@
             in a meaningful way. At any given time, about one-third of the classrooms are engaged in some
             technology-related activities. Students blog immediately when they come into class to settle in. They’ve
             written and recorded their own protest songs on their laptops while studying the First Amendment.
-            <br><img src="obrazky/code.jpg" alt="" class="image">
+            <br><img src="obrazky/watch1.jpg" alt="" class="image">
             <br>
-            <h3>Sensitive data</h3>
+            <h3>Extreme sports</h3>
             <br>
             While laptops may have started as a business tool,
             their role in education is only now being fully
@@ -94,7 +91,7 @@
             homework assignments and grades.
             <br>
             <br>
-            <h3>Privacy</h3>
+            <h3>Durable matherials</h3>
             <br>
             In a study recently published in Computers in Education Journal, 78 percent of students agreed the laptops
             made them more engaged and about half said they were more attentive as a result of the technology. About
