--- a/sandbox/project/technology4.html
+++ b/sandbox/project/technology4.html
@@ -47,64 +47,52 @@
 
             Boaty McBoatface, the comically named autonomous submarine courtesy of a collective internet joke, will be
             among a fleet of underwater robots dispatched to the underbelly of the deteriorating Thwaites glacier in
-            Western Antarctica.<br>
+            Western Antarctica.<br><br>
 
-            A recent study in the Journal of Technology, Learning, and Assessment found students in one-to-one computer
-            settings like LGF outperformed peers in traditional classrooms. In a single year, 20 percent of LGF students
-            increased their reading skills by two grade levels. The number of students referred to LGF’s principal or
-            other intervention specialists for disciplinary reasons has dropped from 500 to 100 in two years. Prior to a
-            flu outbreak, Socia says attendance levels had increased.
+            According to a press release this week by the International Thwaites Glacier Collaboration, the crew of
+            robots—including Boaty McBoatface, the University of Gothenburg’s Ran, and six ocean gliders—are headed out
+            to Antarctica from Punta Arenas, Chile. Once they reach Thwaites, they will wander in and under the ice
+            shelf—illuminating its various cavities, scoping out its geometry—to quantify how it’s melting. They will
+            also assess the environment around the glacier, such as the seafloor below, the thick ice above, and the
+            properties of the seawater flowing in between the different structures.
 
-            LGF is championing the notion that laptops have their greatest impact in the classroom by engaging students,
-            teachers and parents in creative, new ways. “People assume that if students are using individual laptops
-            they can’t be collaborating,” Socia says. “But if they are blogging, we use a LCD projector to show the
-            blogs on the board so the students can comment on each other’s work. The students can e-mail their writing
-            to a classmate for peer-to-peer editing in ten seconds.”
+            In a study published in Science Advances last year, the team found that changes in salinity, temperature,
+            and oxygen can spotlight the areas where different water masses mix to influence the melting process at the
+            base of the ice.<br><br>
 
-            This dovetails with studies that indicate laptops shift instruction from lectures to individual and group
-            projects. At LGF, teachers use the technology to differentiate their instruction based on the special needs
-            or learning levels of a student. A crucial aspect for LGF is the inclusion of parents, many of whom have
-            never touched a computer before. Hundreds of families have joined the Technology Goes Home program, where
-            they are provided with training and a netbook to use at home.
+            The Thwaites glacier, a Florida-sized chunk of ice nicknamed the “doomsday glacier,” has been losing about
+            50 billion tons of ice each year (accounting for around 4 percent of global sea level rise). Preliminary
+            research from the American Geophysical Union estimates that in the next three to five years, the thinning
+            ice shelf extending from Thwaites could crumble, setting off a chain of melting events that could raise
+            global ocean levels up to 10 feet. Further research has indicated that the Southern Ocean is warming
+            Thwaites from below, slowly etching a web of cracks across the floating ice shelf.
 
-            “The parents take the computer home and the child becomes the teacher,” Socia says. “They sit together and
-            it improves the relationship. It’s a win-win situation.” Parents now hop online and check their children’s
-            homework assignments and grades.
+            Boaty’s job is to measure temperature, salinity, current velocity, turbulence, turbidity, and dissolved
+            oxygen in water as it charts a path through the icy underworld. Scientists can then use this data to
+            understand how variations in these conditions affect the behavior and stability of local ice shelves.
+            Another underwater robot, Ran, is in charge of mapping the shape of the seabed, and the expanse of caverns
+            and dimples covering the underside of the glacier. It will also collect samples of water for in-lab
+            analysis.
+
+            Boaty, the programmable robotic sub, was developed at the National Oceanography Centre. It travels on its
+            own to great depths on scientific missions under water and ice. As an autonomous long-range vehicle, Boaty
+            can traverse hundreds of miles for several months at a time. It can even venture as deep as about 3.7 miles
+            below the surface. Boaty completed its first under-ice operation in February 2018, when it spent 51 hours
+            beneath the frigid waters of the southern Weddell Sea.
             <br>
+            <br><img src="obrazky/boaty.jpg" alt="" class="image-c" align="right">
+            <h3>The goal</h3>
             <br>
-            <h3>Taking College by Storm</h3>
-            <br>
-            In a study recently published in Computers in Education Journal, 78 percent of students agreed the laptops
-            made them more engaged and about half said they were more attentive as a result of the technology. About
-            seven in 10 students said the laptops had a positive effect on their learning.
+            Boaty will not go on this mission alone. A team of 32 international scientists is set to accompany the robot
+            fleet on this 65-day voyage aboard the Nathaniel B. Palmer research ship.
 
-            Case in point: Perry Samson, Ph.D., a meteorologist and professor at the University of Michigan, teaches a
-            lecture class in Extreme Weather. He explains how tornados form and why climate change may result in more
-            intense hurricanes. Now he’s shaking up education with a robust interactive response system called
-            LectureTools, which makes use of the laptops his students carry into his lecture hall.
-            <br>
-            <br>
-            During class, students can view Professor Samson’s PowerPoint slides on their laptops and take notes
-            directly on the slides. Using a chat window, the students can anonymously ask the teacher’s aide questions
-            during the lecture. Professor Samson can see the questions, too, providing him with valuable insight into
-            the student’s comprehension of his lecture without disrupting the flow of the class. Students can also rate
-            their understanding of the slides, giving him more immediate feedback.
+            Since Boaty is heading into the unknown, to save it from bumping around in the dark, researchers will aid
+            its navigation from the ship using a command and control system the National Oceanography Centre created
+            that can reprogram Boaty with WiFi over satellite or an acoustic modem.
 
-            “It’s sobering,” Professor Samson says. “I always thought I was God’s gift to lecturing; now I realize how
-            confused the students were before they could ask questions.”
-
-            After laughing, he continues: “The students can ask what they think is a dumb question without fear. In the
-            30 years I’ve taught, there are usually only five or six students in a 300-student lecture class who had the
-            chutzpah to raise their hand and ask a question. Now, with this system, two-thirds of the students are
-            asking questions.”
-
-            During class, students can use their laptops to answer multiple-choice questions and image-based questions,
-            such as locating weather patterns on a map. “By how they answer questions, I can see which students are in
-            trouble before the first exam and which require more attention,” Professor Samson says.
-
-            Skeptics have been concerned that students will use laptops for too much play and not enough work. But
-            Professor Samson says he’s proven otherwise. “The key is to engage students through their laptops, so they
-            don’t drift off to social networking sites. And we’ve shown you can do that.”
+            Working alongside the robots to collect data will be real-life weddell and elephant seals co-opted as moving
+            sensors that will gather information about water temperature and saltiness as they freely roam across the
+            icy ocean.
             <br><br>
 
         </div>
